dom/system/gonk/NetworkWorker.h
@@ -13,8 +13,7 @@
 
 namespace mozilla {
 
-class NetworkWorker MOZ_FINAL : public nsINetworkWorker,
-                                public mozilla::ipc::NetdConsumer
+class NetworkWorker MOZ_FINAL : public nsINetworkWorker
 {
 public:
   NS_DECL_ISUPPORTS
@@ -23,7 +22,6 @@ public:
   static already_AddRefed<NetworkWorker> FactoryCreate();
 
   void DispatchNetworkResult(const mozilla::dom::NetworkResultOptions& aOptions);
-  void MessageReceived(mozilla::ipc::NetdCommand* aMessage);
 
 private:
   NetworkWorker();
@@ -31,7 +29,6 @@ private:
 
   static void NotifyResult(mozilla::dom::NetworkResultOptions& aResult);
 
-  nsCOMPtr<nsIThread> mWorkerThread;
   nsCOMPtr<nsINetworkEventListener> mListener;
 };
 
